# ZTManager

./: .gitignore  README.md  io.github.riemarukarurosu.ZTManager.json  io.github.riemarukarurosu.ZeroTierGTK.json  meson.build  org.zerotier.ZerotierGTK.json
.copr/: Makefile
.github/workflows/: release.yml
data/: io.github.riemarukarurosu.ZTManager.desktop.in  io.github.riemarukarurosu.ZTManager.gschema.xml  io.github.riemarukarurosu.ZTManager.metainfo.xml.in  io.github.riemarukarurosu.ZeroTierGTK.desktop.in  io.github.riemarukarurosu.ZeroTierGTK.gschema.xml  io.github.riemarukarurosu.ZeroTierGTK.metainfo.xml.in  meson.build
data/icons/: meson.build
packaging/: build-appimage.sh  build-rpm.sh  ztmanager.spec
po/: POTFILES  es.po  meson.build
src/: __init__.py  installer.py  main.py  meson.build  preferences.py  window.py  window.ui  zerotiergtk.gresource.xml  zerotierlib.py  ztmanager.gresource.xml  ztmanager.in
